--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,8 @@ spring.datasource.h2.driver-class-name=org.h2.Driver
 spring.datasource.h2.url=jdbc:h2:mem:mydb
 spring.datasource.h2.username=sa
 spring.datasource.h2.password=null
+spring.datasource.postgres.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.postgres.username=postgres
+spring.datasource.postgres.password=jolt
+
 
