--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.datasource.mysql.url=jdbc:mysql://localhost:3306/jbtests?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.mysql.username=irina
+#spring.datasource.mysql.username=
+spring.datasource.mysql.user=irina
 spring.datasource.mysql.password=jolt
-spring.datasource.mysql.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.mysql.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.mysql.auto-slow-log=true
 spring.datasource.h2.driver-class-name=org.h2.Driver
 spring.datasource.h2.url=jdbc:h2:mem:mydb
 spring.datasource.h2.username=sa
